# Prompting-Challenge-Projects

./: .gitignore
ImageConverter/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
NotebookApp/: MainWindow.h  Note.cpp  Note.h
Temp/NotebookApp/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Temp/NotebookApp/.cache/clangd/index/: MainWindow.cpp.5B23B7D3BAF7EA5D.idx  MainWindow.h.DD9D25B0E0EAFA6E.idx  Note.cpp.A88F3A2C2ECEC26D.idx  Note.h.71044921C7242FEE.idx  main.cpp.3194CF5A0733A8D3.idx
